--- a/8.math1/6064/6064.md
+++ b/8.math1/6064/6064.md
@@ -1,9 +1,9 @@
-* 카잉달력
+#카잉달력
 -------------
 
 최소공배수 이용하기 
 
-**유클리드 호제법
+## 유클리드 호제법
  유클리드 호제법 알고리즘을 사용하면 최대 공약수를 빠르게 계산할 수 있습니다. 
  유클리드 호제법을 간략히 요약하면 아래와 같습니다. 
 
